name: easy-deploy
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/easy-deploy#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/easy-deploy

library
    exposed-modules:
        Lib
        Command
        Docker
    build-depends:
        base >=4.7 && <5,
        process -any,
        split -any,
        either -any,
        directory -any,
        mtl -any,
        HTTP -any,
        getflag -any
    default-language: Haskell2010
    hs-source-dirs: src

executable easy-deploy-exe
    main-is: Main.hs
    build-depends:
        base -any,
        easy-deploy -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite easy-deploy-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        easy-deploy -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
